[gd_scene load_steps=4 format=3 uid="uid://0rvwx3l0h4ut"]

[ext_resource type="Script" path="res://scenes/mercy.gd" id="1_omhpp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_20y84"]
size = Vector2(60, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ldo8d"]
size = Vector2(76, 16)

[node name="mercy" type="Node2D"]
script = ExtResource("1_omhpp")

[node name="mercytimer" type="Timer" parent="."]

[node name="GridContainer2" type="GridContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="return" type="Label" parent="GridContainer2"]
layout_mode = 2
text = "Indietro"

[node name="returnArea" type="Area2D" parent="GridContainer2/return"]

[node name="ret" type="CollisionShape2D" parent="GridContainer2/return/returnArea"]
position = Vector2(31, 12)
shape = SubResource("RectangleShape2D_20y84")
disabled = true

[node name="spare" type="Label" parent="GridContainer2"]
layout_mode = 2
text = "Risparmia"

[node name="spareArea" type="Area2D" parent="GridContainer2/spare"]

[node name="spa" type="CollisionShape2D" parent="GridContainer2/spare/spareArea"]
position = Vector2(39, 14)
shape = SubResource("RectangleShape2D_ldo8d")
disabled = true
debug_color = Color(1, 1, 0, 0.309804)

[connection signal="timeout" from="mercytimer" to="." method="_on_mercytimer_timeout"]
[connection signal="body_entered" from="GridContainer2/return/returnArea" to="." method="_on_return_area_body_entered"]
[connection signal="body_exited" from="GridContainer2/return/returnArea" to="." method="_on_return_area_body_exited"]
[connection signal="body_entered" from="GridContainer2/spare/spareArea" to="." method="_on_spare_area_body_entered"]
[connection signal="body_exited" from="GridContainer2/spare/spareArea" to="." method="_on_spare_area_body_exited"]
